# track-signal-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yml
example/: example1.py  example2.py  example3.py  example4.py  example5.py  lausitz simple.ppxml
tests/: test_generator.py  testcases.py
tests/topologies/: intermediary_node.pickle  straight_track.pickle  switch_simple.pickle
track_signal_generator/: generator.py
