[tool.poetry]
name = "track-signal-generator"
version = "0.1.0"
description = ""
authors = ["Saturnhafen <37272151+SaturnHafen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "track_signal_generator"}]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "7.1.2"

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
