[tool.poetry]
name = "track-signal-generator"
version = "0.1.0"
description = ""
authors = ["Saturnhafen <37272151+SaturnHafen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "track_signal_generator"}]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "7.1.2"

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges"}

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]
sumoexporter = {git = "https://github.com/bp2022-ap1/sumo-exporter", branch="refactor/replace-connected-nodes-edges"}
railway-route-generator = {git = "https://github.com/bp2022-ap1/railway-route-generator", branch="refactor/replace-connected-nodes-edges"}
planpro-importer = {git = "https://github.com/bp2022-ap1/planpro-importer", branch="refactor/replace-connected-nodes-edges"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
